--- a/WeatherApp/app/src/main/res/values/strings.xml
+++ b/WeatherApp/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">WeatherApp</string>
     <string name="textViewNow">now:</string>
-    <string name="textViewCityName">Petropavlovsk - Kamchatsky</string>
+    <string name="textViewCityName"></string>
     <string name="textVewTemperature">+12</string>
     <string name="textViewTempMesur">C</string>
     <string name="textViewAngle">o</string>
@@ -27,5 +27,5 @@
     <string name="textviewPressurMesur">mm Hg</string>
     <string name="textviewPobablyValue">78</string>
     <string name="textviewProbablyMesur">%</string>
-    <string name="editTextEnterCity">editTextEnterCity</string>
+    <string name="editTextEnterCity">EnterCity</string>
 </resources>
