Добавил в макет add_settings чекбоксы установки единиц измерения температуры С и F

--- a/WeatherApp/app/src/main/res/values/strings.xml
+++ b/WeatherApp/app/src/main/res/values/strings.xml
@@ -28,4 +28,7 @@
     <string name="textviewPobablyValue">78</string>
     <string name="textviewProbablyMesur">%</string>
     <string name="editTextEnterCity">EnterCity</string>
+    <string name="textviewShowTempMesur">show temperature in:</string>
+    <string name="checkBoxSetTempCelcium">C</string>
+    <string name="checkboxSetTempFahren">F</string>
 </resources>
