--- a/WeatherApp/app/src/main/res/values/strings.xml
+++ b/WeatherApp/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="radioButtonSetTempCelcium">C</string>
     <string name="radioButtonSetTempFahren">F</string>
     <string name="textviewWeekForecast">week forecast:</string>
+    <string name="textViewRecentCityItem" />
 </resources>
